Reorganized info images still no font spacing issues

--- a/web/src/styles/layout.scss
+++ b/web/src/styles/layout.scss
@@ -4,13 +4,13 @@
 
 html {
   font-size: 62.5%;
+  background-color:#f8f8ff;
 }
 
 .body{
   max-width: 800px;
   width: 100%;
   margin:0px auto;
-  background-color:#f8f8ff;
   font-family: sans-serif;
 }
 
@@ -27,20 +27,13 @@ p {
   font-size: 1.6rem;
 }
 
+ul{
+  list-style: circle inside;
+  li{
+    margin: 5px 10px;
+  }
+}
 header{
-  .logoBox{
-    margin:10px 0px 0px 100px;
-    width:25%;
-  }
-  .logo{
-    background-color:rgba(250, 250, 250,.8);
-    border-radius:20px;
-  }
-  .titleBox{
-    padding-top:20px;
-    text-align:center;
-    width:75%;
-  }
   border-radius:10px;
   background-image: url("../img/barn.jpg");
   background-repeat: no-repeat;
@@ -49,19 +42,40 @@ header{
   flex-direction: row;
   justify-content: space-between;
   height:283px;
+  .logoBox{
+    margin:20px 0px 0px 100px;
+    width:25%;
+  }
+  .logo{
+    background-color:rgba(250, 250, 250,.6);
+    border-radius:20px;
+  }
+  .titleBox{
+    padding-top:20px;
+    text-align:center;
+    width:75%;
+  }
 }
 
 main{
-  background-image: url("/src/img/rider_20.png");
+  background-image: url("/src/img/rider_30.png");
   background-repeat: repeat-y;
   background-position: center top;
   background-size:800px;
 
   .infoBox{
-    margin:15px 15px;
+    display:flex;
+    flex-direction: row;
+    margin:15px 0px;
     padding:5px 15px;
     background-color:rgba(50,50,50,.1);
     border-radius: 10px;
     box-shadow: 3px 3px #BBB;
+    div p{
+      margin:10px 0px;
+    }
+    img{
+      border-radius: 5px;
+    }
   }
 }
